/*
 * Copyright 2024, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.tools.mc.java.mgroup;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.tools.mc.java.marker";
option java_outer_classname = "ViewsProto";
option java_multiple_files = true;

import "spine/protodata/ast.proto";
import "spine/protodata/file.proto";
import "spine/protodata/source.proto";


// Messages discovered in a file with `(every_is)` option declared.
message EveryIsMessages {

    option (entity).kind = VIEW;

    // The file in which the option was discovered.
    protodata.File file = 1 [(required) = true];

    //TODO:2024-09-17:alexander.yevsyukov: Use EveryIsOption below.
    // The discovered option value.
    IsOption option = 2 [(required) = true];

    // The header of the file.
    protodata.ProtoFileHeader header = 3 [(required) = true];

    // Message types declared in the file.
    repeated protodata.MessageType type = 4;
}

// Message types with `(is)` option.
message MessagesWithIs {
    option (entity).kind = VIEW;

    // Provided by routing of the repository.
    string singleton_id = 1;

    // The discovered message types.
    repeated protodata.MessageType type = 2;
}
